
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct sockaddr {int dummy; } ;
struct TYPE_3__ {int s_addr; } ;
struct TYPE_4__ {int sin_zero; TYPE_1__ sin_addr; int sin_port; int sin_family; } ;


 int AF_INET ;
 int SOCK_STREAM ;
 int bzero (int *,int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int ) ;
 TYPE_2__ hrm ;
 int htons (int) ;
 int inet_addr (char*) ;
 int perror (char*) ;
 int printf (char*,char*,int) ;
 int socket (int ,int ,int ) ;

int conn(char *ip,int port)
{
 int sockfd;
 hrm.sin_family = AF_INET;
 hrm.sin_port = htons(port);
 hrm.sin_addr.s_addr = inet_addr(ip);
 bzero(&(hrm.sin_zero),8);
 sockfd = socket(AF_INET,SOCK_STREAM,0);
if((connect(sockfd,(struct sockaddr *)&hrm,sizeof(struct sockaddr))) < 0)
 {
 perror("connect");
 exit(0);
 }
 printf("[x] Connected to: %s PORT: %d\n",ip,port);
 return sockfd;
}
